# fraud-scoring

./: .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: ci.yml
artifacts/load_test/: docker_load_test.txt  raw_uvicorn_load_test.txt  sample_predict_response.json
configs/: serve.yaml  train.yaml  train_smoke.yaml
data/raw/: fraudTest.csv.dvc  fraudTrain.csv.dvc
docs/: design.md
scripts/: load_test.py  make_daily_batches.py  render_terminal_screenshot.py
src/fraud_scoring/: evaluate.py  ingest.py  models_deep.py  registry.py  train.py  train_deep.py
src/fraud_scoring/features/: build.py  online.py  pure.py
src/fraud_scoring/monitoring/: drift.py  retrain_trigger.py
src/fraud_scoring/serve/: app.py  schemas.py
tests/: test_api.py  test_drift.py  test_evaluate_gate.py  test_feature_parity.py  test_features.py
tests/fixtures/: smoke_fraudTest.csv  smoke_fraudTrain.csv
