[project]
name = "fraud-scoring"
version = "0.1.0"
description = "Real-time credit card fraud scoring system"
requires-python = ">=3.11"
dependencies = [
    "pandas==2.2.3",
    "numpy==1.26.4",
    "scikit-learn==1.5.2",
    "lightgbm==4.5.0",
    "torch==2.5.1",
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.9.2",
    "pyarrow==18.0.0",
    "dvc==3.58.0",
    "pathspec==0.12.1",
    "httpx==0.27.2",
    "pyyaml==6.0.2",
    "matplotlib==3.9.2",
    "joblib==1.4.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "ruff==0.7.4",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
